<resources>
    <string name="app_name">b07project</string>
    <string name="banner">DoorSmash</string>
    <string name="subbanner">DoorSmash is smashing to your door</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="remember_me">Remember me</string>
    <string name="store_owner">Check if you are a store owner</string>
    <string name="button_storelist">View Store List</string>
    <string name="button_myorder">My Order</string>
    <string name="button_products">View Product List</string>
    <string name="button_orders">Orders</string>
    <string name="email_require">Email is required!</string>
    <string name="email_invalid">Invalid email!</string>
    <string name="password_require">Password is required!</string>
    <string name="password_valid">Password should be at least 6 characters</string>
    <string name="storeOwner_register_success">Store owner registered successfully!</string>
    <string name="customer_register_success">Customer registered successfully!</string>
    <string name="storeOwner_register_failed">Failed to create a store owner</string>
    <string name="customer_register_failed">Failed to create a customer</string>
    <string name="signup_failed">Failed to sign up</string>
    <string name="login_failed">Failed to log in</string>
    <string name="product_add_successfully">Product Added Successfully.</string>
    <string name="product_fail_to_add">Product Not Added!</string>
    <string name="stoList">Store\'s Order List</string>
    <string name="tv_myOrder">My Orders</string>
    <string name="type_customer">Customer</string>
    <string name="type_storeOwner">Store Owner</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="check_if_complete">Check if Complete</string>
    <string name="add_new_product">Add New Product</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_name">Product Name</string>
    <string name="view_order">View Orders</string>
    <string name="store">Store</string>
    <string name="product_list">Product List</string>
    <string name="place_order">Place Order</string>
    <string name="login">LOG IN</string>
    <string name="signUp">Sign Up</string>


</resources>